@@ -1,26 +1,42 @@
 package org.mtr.client;
 
-import it.unimi.dsi.fastutil.ints.Int2ObjectAVLTreeMap;
-import it.unimi.dsi.fastutil.ints.IntAVLTreeSet;
-import it.unimi.dsi.fastutil.ints.IntArrayList;
-import it.unimi.dsi.fastutil.longs.LongArrayList;
-import it.unimi.dsi.fastutil.objects.*;
 import net.minecraft.client.render.VertexConsumer;
 import net.minecraft.client.texture.NativeImage;
 import net.minecraft.client.util.math.MatrixStack;
 import net.minecraft.util.Identifier;
 import net.minecraft.util.math.Direction;
 import net.minecraft.util.math.MathHelper;
+import org.jspecify.annotations.Nullable;
 import org.mtr.MTR;
 import org.mtr.config.Config;
 import org.mtr.core.data.*;
 import org.mtr.core.tool.Utilities;
 import org.mtr.data.IGui;
+import org.mtr.libraries.it.unimi.dsi.fastutil.ints.Int2ObjectAVLTreeMap;
+import org.mtr.libraries.it.unimi.dsi.fastutil.ints.IntAVLTreeSet;
+import org.mtr.libraries.it.unimi.dsi.fastutil.ints.IntArrayList;
+import org.mtr.libraries.it.unimi.dsi.fastutil.longs.LongArrayList;
+import org.mtr.libraries.it.unimi.dsi.fastutil.objects.*;
 import org.mtr.resource.ResourceManagerHelper;
 import org.mtr.tool.RouteHelper;
 
 import java.util.Locale;
 
+/**
+ * Procedural texture generator for station names, route maps, exit signs, direction
+ * arrows, and every other "text on a sign" surface in the world.
+ *
+ * <p>Every {@code generate*} method here returns a freshly-allocated
+ * {@link net.minecraft.client.texture.NativeImage} that the caller is expected to wrap in
+ * a texture binding (via {@link DynamicTextureCache#getResource} — see callers of this
+ * class). The methods themselves are pure (no caching, no global state mutation beyond
+ * the {@link #setConstants()} helper).</p>
+ *
+ * <p>The output resolution is controlled by the dynamic-texture-resolution config knob via
+ * {@link #setConstants()} and the local {@link #scale} / {@link #lineSize} fields. Higher
+ * resolutions multiply CPU cost by 4× per step — see {@code docs/PERFORMANCE.md} §2 for
+ * the broader budget.</p>
+ */
 public class RouteMapGenerator implements IGui {
 
 	private static int scale;
@@ -28,6 +44,12 @@ public class RouteMapGenerator implements IGui {
 	private static int lineSpacing;
 	private static int fontSizeBig;
 	private static int fontSizeSmall;
+	/**
+	 * Last dynamic-texture-resolution value the constants were computed for. {@link #setConstants()}
+	 * is otherwise pure of the resolution value, so we skip recompute when nothing has
+	 * changed — see {@code docs/PERFORMANCE.md} §4.4.
+	 */
+	private static int lastResolution = Integer.MIN_VALUE;
 
 	public static final int PIXEL_SCALE = 4;
 	private static final int MIN_VERTICAL_SIZE = 5;
@@ -37,14 +59,28 @@ public class RouteMapGenerator implements IGui {
 	private static final String CIRCLE_RESOURCE = "textures/block/sign/circle.png";
 	private static final int PIXEL_RESOLUTION = 24;
 
+	/**
+	 * Recompute {@link #scale}, {@link #lineSize}, {@link #lineSpacing}, {@link #fontSizeBig}
+	 * and {@link #fontSizeSmall} from the current
+	 * {@code Config.getClient().getDynamicTextureResolution()} value.
+	 *
+	 * <p>Currently called from {@link DynamicTextureCache#getResource} on every request —
+	 * see {@code docs/PERFORMANCE.md} §4.4 for the proposed caching change.</p>
+	 */
 	public static void setConstants() {
-		scale = (int) Math.pow(2, Config.getClient().getDynamicTextureResolution() + 5);
+		final int resolution = Config.getClient().getDynamicTextureResolution();
+		if (resolution == lastResolution) {
+			return;
+		}
+		lastResolution = resolution;
+		scale = (int) Math.pow(2, resolution + 5);
 		lineSize = scale / 8;
 		lineSpacing = lineSize * 3 / 2;
 		fontSizeBig = lineSize * 2;
 		fontSizeSmall = fontSizeBig / 2;
 	}
 
+	@Nullable
 	public static NativeImage generatePixelatedText(String text, int textColor, int maxWidth, double cjkSizeRatio, boolean fullPixel) {
 		try {
 			final int scale = fullPixel ? 1 : PIXEL_SCALE;
@@ -59,34 +95,36 @@ public class RouteMapGenerator implements IGui {
 			drawStringPixelated(nativeImage, pixels, dimensions, textColor, fullPixel);
 			return nativeImage;
 		} catch (Exception e) {
-			MTR.LOGGER.error("", e);
+			MTR.LOGGER.error("Failed to generate pixelated text image for [{}]", text, e);
 		}
 
 		return null;
 	}
 
+	@Nullable
 	public static NativeImage generateColorStrip(long platformId) {
 		try {
 			final IntArrayList colors = RouteHelper.getRouteStream(platformId, false, (simplifiedRoute, currentStationIndex) -> {
 			});
+			final NativeImage nativeImage;
 			if (colors.isEmpty()) {
-				final NativeImage nativeImage = new NativeImage(NativeImage.Format.RGBA, 1, 1, false);
+				nativeImage = new NativeImage(NativeImage.Format.RGBA, 1, 1, false);
 				nativeImage.setColorArgb(0, 0, 0);
-				return nativeImage;
 			} else {
-				final NativeImage nativeImage = new NativeImage(NativeImage.Format.RGBA, 1, colors.size(), false);
+				nativeImage = new NativeImage(NativeImage.Format.RGBA, 1, colors.size(), false);
 				for (int i = 0; i < colors.size(); i++) {
 					drawPixelSafe(nativeImage, 0, i, ARGB_BLACK | colors.getInt(i));
 				}
-				return nativeImage;
 			}
+			return nativeImage;
 		} catch (Exception e) {
-			MTR.LOGGER.error("", e);
+			MTR.LOGGER.error("Failed to generate colour strip image for platform [{}]", platformId, e);
 		}
 
 		return null;
 	}
 
+	@Nullable
 	public static NativeImage generateStationName(String stationName, float aspectRatio) {
 		if (aspectRatio <= 0) {
 			return null;
@@ -104,12 +142,13 @@ public class RouteMapGenerator implements IGui {
 			drawString(nativeImage, pixels, width / 2, height / 2, dimensions, HorizontalAlignment.CENTER, VerticalAlignment.CENTER, 0, ARGB_WHITE, false);
 			return nativeImage;
 		} catch (Exception e) {
-			MTR.LOGGER.error("", e);
+			MTR.LOGGER.error("Failed to generate station name image for [{}]", stationName, e);
 		}
 
 		return null;
 	}
 
+	@Nullable
 	public static NativeImage generateTallStationName(int textColor, String stationName, int stationColor, float aspectRatio) {
 		if (aspectRatio <= 0) {
 			return null;
@@ -124,7 +163,7 @@ public class RouteMapGenerator implements IGui {
 			final NativeImage nativeImage = new NativeImage(NativeImage.Format.RGBA, width, height, false);
 			nativeImage.fillRect(0, 0, width, height, 0);
 			drawString(nativeImage, pixels, width / 2, height / 2, dimensions, HorizontalAlignment.CENTER, VerticalAlignment.CENTER, ARGB_BLACK | stationColor, textColor, false);
-			clearColor(nativeImage, invertColor(ARGB_BLACK | stationColor));
+			clearColor(nativeImage, ARGB_BLACK | stationColor);
 			return nativeImage;
 		} catch (Exception e) {
 			MTR.LOGGER.error("", e);
@@ -133,6 +172,7 @@ public class RouteMapGenerator implements IGui {
 		return null;
 	}
 
+	@Nullable
 	public static NativeImage generateStationNameEntrance(int textColor, String stationName, float aspectRatio) {
 		if (aspectRatio <= 0) {
 			return null;
@@ -148,10 +188,9 @@ public class RouteMapGenerator implements IGui {
 			final int fakeBackgroundColor = textColor == ARGB_BLACK ? textColor + 0x010101 : 0;
 
 			final NativeImage nativeImage = new NativeImage(NativeImage.Format.RGBA, width, size, false);
-			nativeImage.fillRect(0, 0, width, size, fakeBackgroundColor);
 			drawResource(nativeImage, LOGO_RESOURCE, xOffset, 0, size, size, false, 0, 1, 0, true);
 			drawString(nativeImage, pixels, size + xOffset, size / 2, dimensions, HorizontalAlignment.LEFT, VerticalAlignment.CENTER, fakeBackgroundColor, textColor, false);
-			clearColor(nativeImage, invertColor(fakeBackgroundColor));
+			clearColor(nativeImage, fakeBackgroundColor);
 
 			return nativeImage;
 		} catch (Exception e) {
@@ -161,6 +200,7 @@ public class RouteMapGenerator implements IGui {
 		return null;
 	}
 
+	@Nullable
 	public static NativeImage generateSingleRowStationName(long platformId, float aspectRatio) {
 		if (aspectRatio <= 0) {
 			return null;
@@ -184,6 +224,7 @@ public class RouteMapGenerator implements IGui {
 		return null;
 	}
 
+	@Nullable
 	public static NativeImage generateSignText(String text, HorizontalAlignment horizontalAlignment, float paddingScale, int backgroundColor, int textColor) {
 		try {
 			final int height = scale;
@@ -202,7 +243,7 @@ public class RouteMapGenerator implements IGui {
 			final NativeImage nativeImage = new NativeImage(NativeImage.Format.RGBA, width, height, false);
 			nativeImage.fillRect(0, 0, width, height, 0);
 			drawString(nativeImage, pixels, width / 2, height / 2, dimensions, HorizontalAlignment.CENTER, VerticalAlignment.CENTER, backgroundColor, textColor, false);
-			clearColor(nativeImage, invertColor(backgroundColor));
+			clearColor(nativeImage, backgroundColor);
 
 			return nativeImage;
 		} catch (Exception e) {
@@ -212,6 +253,7 @@ public class RouteMapGenerator implements IGui {
 		return null;
 	}
 
+	@Nullable
 	public static NativeImage generateLiftPanel(String text, int textColor) {
 		try {
 			final int width = Math.round(scale * 1.5F);
@@ -221,7 +263,7 @@ public class RouteMapGenerator implements IGui {
 			final NativeImage nativeImage = new NativeImage(NativeImage.Format.RGBA, width, height, false);
 			nativeImage.fillRect(0, 0, width, height, 0);
 			drawString(nativeImage, pixels, width / 2, height / 2, dimensions, HorizontalAlignment.CENTER, VerticalAlignment.CENTER, ARGB_BLACK, textColor, false);
-			clearColor(nativeImage, invertColor(ARGB_BLACK));
+			clearColor(nativeImage, ARGB_BLACK);
 
 			return nativeImage;
 		} catch (Exception e) {
@@ -231,6 +273,7 @@ public class RouteMapGenerator implements IGui {
 		return null;
 	}
 
+	@Nullable
 	public static NativeImage generateExitSignLetter(String exitLetter, String exitNumber, int backgroundColor) {
 		try {
 			final int size = scale / 2;
@@ -256,6 +299,7 @@ public class RouteMapGenerator implements IGui {
 		return null;
 	}
 
+	@Nullable
 	public static NativeImage generateRouteSquare(int color, String routeName, HorizontalAlignment horizontalAlignment) {
 		try {
 			final int padding = scale / 32;
@@ -265,7 +309,7 @@ public class RouteMapGenerator implements IGui {
 			final int width = dimensions[0] + padding * 2;
 			final int height = dimensions[1] + padding * 2;
 			final NativeImage nativeImage = new NativeImage(NativeImage.Format.RGBA, width, height, false);
-			nativeImage.fillRect(0, 0, width, height, invertColor(ARGB_BLACK | color));
+			nativeImage.fillRect(0, 0, width, height, ARGB_BLACK | color);
 			drawString(nativeImage, pixels, width / 2, height / 2, dimensions, HorizontalAlignment.CENTER, VerticalAlignment.CENTER, 0, ARGB_WHITE, false);
 			return nativeImage;
 		} catch (Exception e) {
@@ -275,6 +319,7 @@ public class RouteMapGenerator implements IGui {
 		return null;
 	}
 
+	@Nullable
 	public static NativeImage generateDirectionArrow(long platformId, boolean hasLeft, boolean hasRight, HorizontalAlignment horizontalAlignment, boolean showToString, float paddingScale, float aspectRatio, int backgroundColor, int textColor, int transparentColor) {
 		if (aspectRatio <= 0) {
 			return null;
@@ -298,13 +343,12 @@ public class RouteMapGenerator implements IGui {
 
 			final DynamicTextureCache clientCache = DynamicTextureCache.instance;
 			final NativeImage nativeImage = new NativeImage(NativeImage.Format.RGBA, width, height, false);
-			nativeImage.fillRect(0, 0, width, height, invertColor(backgroundColor));
+			nativeImage.fillRect(0, 0, width, height, backgroundColor);
 
 			final int circleX;
 			if (isTerminating) {
 				circleX = (int) horizontalAlignment.getOffset(0, tileSize - width);
 			} else {
-
 
 				final int tilePadding = tileSize / 4;
 				final int leftSize = ((hasLeft ? 1 : 0) + (leftToRight ? 1 : 0)) * (tileSize + tilePadding);
@@ -337,7 +381,7 @@ public class RouteMapGenerator implements IGui {
 			}
 
 			if (transparentColor != 0) {
-				clearColor(nativeImage, invertColor(transparentColor));
+				clearColor(nativeImage, transparentColor);
 			}
 
 			return nativeImage;
@@ -348,6 +392,7 @@ public class RouteMapGenerator implements IGui {
 		return null;
 	}
 
+	@Nullable
 	public static NativeImage generateRouteMap(long platformId, boolean vertical, boolean flip, float aspectRatio, boolean transparentWhite) {
 		if (aspectRatio <= 0) {
 			return null;
@@ -379,9 +424,9 @@ public class RouteMapGenerator implements IGui {
 						if (stationIndex != currentIndex) {
 							final long stationId = simplifiedRoutePlatforms.get(stationIndex).getStationId();
 							if (stationIndex < currentIndex) {
-								stationsIdsBefore.get(stationsIdsBefore.size() - 1).add(0, stationId);
+								stationsIdsBefore.getLast().add(0, stationId);
 							} else {
-								stationsIdsAfter.get(stationsIdsAfter.size() - 1).add(stationId);
+								stationsIdsAfter.getLast().add(stationId);
 							}
 						}
 					}
@@ -501,7 +546,7 @@ public class RouteMapGenerator implements IGui {
 
 					final int[] dimensions = new int[2];
 					final byte[] pixels = clientCache.getTextPixels(key.split("\\|\\|")[0], dimensions, maxStringWidth, (int) ((fontSizeBig + fontSizeSmall) * DynamicTextureCache.LINE_HEIGHT_MULTIPLIER), fontSizeBig, fontSizeSmall, fontSizeSmall / 4, vertical ? HorizontalAlignment.RIGHT : HorizontalAlignment.CENTER);
-					drawString(nativeImage, pixels, x, y + (textBelow ? lines * lineSpacing : -1) + (textBelow ? 1 : -1) * lineSize * 5 / 4, dimensions, HorizontalAlignment.CENTER, textBelow ? VerticalAlignment.TOP : VerticalAlignment.BOTTOM, currentStation ? ARGB_BLACK : 0, passed ? ARGB_LIGHT_GRAY : currentStation ? ARGB_WHITE : ARGB_BLACK, vertical);
+					drawString(nativeImage, pixels, x, y + (textBelow ? lines * lineSpacing : -1) + (textBelow ? 1 : -1) * lineSize * 5 / 4, dimensions, HorizontalAlignment.CENTER, textBelow ? VerticalAlignment.TOP : VerticalAlignment.BOTTOM, currentStation ? ARGB_BLACK : 0, passed ? ARGB_LIGHT_GRAY : (currentStation ? ARGB_WHITE : ARGB_BLACK), vertical);
 				}));
 
 				if (transparentWhite) {
@@ -540,7 +585,7 @@ public class RouteMapGenerator implements IGui {
 		bounds[0] = 0;
 
 		final LongArrayList commonStationIds = new LongArrayList();
-		stationsIdLists.get(0).forEach(stationId -> {
+		stationsIdLists.getFirst().forEach(stationId -> {
 			if (stationId != 0 && !commonStationIds.contains(stationId) && stationsIdLists.stream().allMatch(stationsIds -> stationsIds.contains(stationId))) {
 				commonStationIds.add(stationId);
 			}
@@ -631,7 +676,7 @@ public class RouteMapGenerator implements IGui {
 	private static void drawLine(NativeImage nativeImage, int x, int y, int directionX, int directionY, int length, int color) {
 		final int halfLineHeight = lineSize / 2;
 		final int xWidth = directionX == 0 ? halfLineHeight : 0;
-		final int yWidth = directionX == 0 ? 0 : directionY == 0 ? halfLineHeight : Math.round(lineSize * MathHelper.SQUARE_ROOT_OF_TWO / 2);
+		final int yWidth = directionX == 0 ? 0 : (directionY == 0 ? halfLineHeight : Math.round(lineSize * MathHelper.SQUARE_ROOT_OF_TWO / 2));
 		final int yMin = y - halfLineHeight - (directionY < 0 ? length : 0) + 1;
 		final int yMax = y + halfLineHeight + (directionY > 0 ? length : 0) - 1;
 		final int drawOffset = directionX != 0 && directionY != 0 ? halfLineHeight : 0;
@@ -748,7 +793,7 @@ public class RouteMapGenerator implements IGui {
 						final int pixel4 = nativeImageResource.getColorArgb(Math.clamp(ceilX, 0, resourceWidth - 1), Math.clamp(ceilY, 0, resourceHeight - 1));
 						final int newColor;
 						if (useActualColor) {
-							newColor = invertColor(pixel1);
+							newColor = pixel1;
 						} else {
 							final float luminance1 = ((pixel1 >> 24) & 0xFF) * percentX1 * percentY1;
 							final float luminance2 = ((pixel2 >> 24) & 0xFF) * percentX2 * percentY1;
@@ -771,14 +816,13 @@ public class RouteMapGenerator implements IGui {
 			if (percent > 0) {
 				final int existingPixel = nativeImage.getColorArgb(x, y);
 				final boolean existingTransparent = ((existingPixel >> 24) & 0xFF) == 0;
-				final int r1 = existingTransparent ? 0xFF : (existingPixel & 0xFF);
+				final int r1 = existingTransparent ? 0xFF : ((existingPixel >> 16) & 0xFF);
 				final int g1 = existingTransparent ? 0xFF : ((existingPixel >> 8) & 0xFF);
-				final int b1 = existingTransparent ? 0xFF : ((existingPixel >> 16) & 0xFF);
+				final int b1 = existingTransparent ? 0xFF : (existingPixel & 0xFF);
 				final int r2 = (color >> 16) & 0xFF;
 				final int g2 = (color >> 8) & 0xFF;
 				final int b2 = color & 0xFF;
-				final float inversePercent = 1 - percent;
-				final int finalColor = ARGB_BLACK | (((int) (r1 * inversePercent + r2 * percent) << 16) + ((int) (g1 * inversePercent + g2 * percent) << 8) + (int) (b1 * inversePercent + b2 * percent));
+				final int finalColor = ARGB_BLACK | (((int) (r1 + (r2 - r1) * percent) << 16) + ((int) (g1 + (g2 - g1) * percent) << 8) + (int) (b1 + (b2 - b1) * percent));
 				drawPixelSafe(nativeImage, x, y, finalColor);
 			}
 		}
@@ -786,12 +830,8 @@ public class RouteMapGenerator implements IGui {
 
 	private static void drawPixelSafe(NativeImage nativeImage, int x, int y, int color) {
 		if (Utilities.isBetween(x, 0, nativeImage.getWidth() - 1) && Utilities.isBetween(y, 0, nativeImage.getHeight() - 1)) {
-			nativeImage.setColorArgb(x, y, invertColor(color));
+			nativeImage.setColorArgb(x, y, color);
 		}
-	}
-
-	private static int invertColor(int color) {
-		return ((color & ARGB_BLACK) != 0 ? ARGB_BLACK : 0) + ((color & 0xFF) << 16) + (color & 0xFF00) + ((color & 0xFF0000) >> 16);
 	}
 
 	private static void clearColor(NativeImage nativeImage, int color) {
